Update UserServiceTest.java